新增通过昵称搜索用户，优化代码

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>bot消息工具</title>
+    <title>Fanbook bot消息工具</title>
+    <meta name="description" content="使用bot向Fanbook中发送各种消息，无需白名单，自动推送私信消息">
   </head>
   <body>
     <div id="app"></div>
